--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
     "react-native-root-siblings": "^5.0.1",
-    "react-native-safe-area-context": "^4.7.2",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-svg": "13.9.0",
     "react-native-toast-message": "^2.1.6",
     "react-native-web": "~0.19.6"
@@ -29,9 +29,9 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
-    "react-native-gesture-handler": "^2.13.1",
-    "react-native-reanimated": "^3.5.4",
-    "react-native-screens": "^3.25.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-screens": "~3.22.0",
     "typescript": "^5.1.3"
   },
   "private": true
